[package]
name = "lushus-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
lushus-storage = { path = "../lushus-storage"}

redis = { version = "0.23.0", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros"] }
